# python-compiles-lisp

./: Makefile  pyproject.toml
python_compiles_lisp/: cli.py  compile.py  evaluate.py  lexer.py  parser.py
tests/: test_lexer.py  test_parser.py  test_python_compiles_lisp.py
tests/examples/: hello-world.pcl
